--- a/filme favorito/index.html
+++ b/filme favorito/index.html
@@ -35,17 +35,20 @@
 
         header h1 {
             text-align: center;
+            height: 0px;
         }
 
         header ul {
             display: flex;
             gap: 20px;
+            justify-content: right;
+            padding: 20px;
         }
 
 
         header li {
             list-style: none;
-            display: block;
+            display: flex;
 
         }
 
@@ -166,4 +169,4 @@
     </footer>
 </body>
 
-</html>
+</html>5
